Issue #26729: Fixed __text_signature__ for sorted(). Patch by Erik Welch.